# cookiecutter-pypackage

./: cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  noxfile.py  pyproject.toml  settings.toml
{{cookiecutter.project_name}}/migrations/: env.py  script.py.mako
{{cookiecutter.project_name}}/{{cookiecutter.package}}/: conifg.py
